Feito apenas por mim | CSS e HTML | Finalizados

--- a/src/app/components/subComponents/cards/cards.component.scss
+++ b/src/app/components/subComponents/cards/cards.component.scss
@@ -18,11 +18,11 @@ footer {
   display: flex;
   flex-direction: column;
   width: 450px;
+  height: 78px;
   justify-content: flex-start;
   padding: 17px 1rem 0px 1rem;
   position: absolute;
-  margin: -67px 0 0 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 img {
