Todo esse codigo foi feito por mim, apenas seguindo o template

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,7 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif
 }
+
+body{
+  background: linear-gradient(120deg, #0f1b3b 0%, #0D2A6E 100%);
+}
