--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -3,6 +3,9 @@ header{
   justify-content: start;
   background: #fff;
   padding: 1.5rem 0 0 0;
+  position: fixed;
+  z-index: 999;
+  width: 100%;
 }
 
 img{
