Iniciando a componentização e fazendo igual o templete da aula

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,18 @@
-<header>
-  <div class="logo">
-    <img src=".././../../assets/img/logoPlastation.png" alt="logo da loja PlayStation.Store">
+<header class="nav-bar__containeir">
+  <div class="nav-bar__logo">
+    <img src=".././../../assets/img/ps-logo.png"
+    alt="logo da loja PlayStation.Store"
+    width="140px"
+    height="32px">
   </div>
 
-  <div class="menu">
+  <div class="nav-bar__menu">
     <ul>
-      <li>PlayStation Plus</li>
-      <li>PlasyStation VR</li>
-      <li>Play games</li>
-      <li>Play games</li>
-      <li>Play games</li>
+      <li><a href="#">PlayStation Plus</a> </li>
+      <li><a href="#">PlasyStation VR</a></li>
+      <li><a href="#">Play games</a></li>
+      <li><a href="#">Play games</a></li>
+      <li><a href="#">Play games</a></li>
     </ul>
   </div>
 </header>
