--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,5 +7,6 @@
 }
 
 body{
-  background: linear-gradient(120deg, #0f1b3b 0%, #0D2A6E 100%);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, #0f1b3b 0%, #0D2A6E 100%);
 }
