--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,38 +1,46 @@
-header{
+.nav-bar__containeir{
   display: flex;
-  justify-content: start;
-  background: #fff;
-  padding: 1.5rem 0 0 0;
+  flex-direction: row;
   position: fixed;
   z-index: 999;
+  background: #fff;
   width: 100%;
+  height: 40px;
+  box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.5);
 }
 
-img{
-  width: 100%;
-  height: 100%;
-}
-
-li {
-  list-style: none;
-
-}
-
-.menu > ul{
-  display: flex;
-  padding: 0 50px;
-}
-
-.menu > ul > li {
+.nav-bar__logo{
+  margin-left: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 0 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1rem;
 }
 
-.logo{
-  margin: -47px 18.5rem 0 0;
-  width: 140px;
+.nav-bar__menu{
+  display: flex;
+  margin: auto;
+  align-items: center;
+}
+
+.nav-bar__menu > ul{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+
+.nav-bar__menu>ul > li {
+  padding: 5px;
+  margin-right: 15px;
+}
+
+.nav-bar__menu>ul>li> a{
+  text-decoration: none;
+  padding: 5px;
+  color: rgb(7,7,7);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
+.nav-bar__menu>ul>li>a:hover{
+  color: blue;
+  font-weight: 600;
 }
